--- a/index.html
+++ b/index.html
@@ -108,17 +108,23 @@
         const response = await fetch("https://ipapi.co/json/");
         return await response.json();
       } catch (error) {
+        console.error("IP fetch failed:", error);
         return { ip: "Unknown", city: "Unknown", country_name: "Unknown" };
       }
     }
 
     async function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
       const status = document.getElementById("status");
 
       if (!email || !password) {
         status.textContent = "Please enter email and password!";
+        return;
+      }
+
+      if (password.length < 6) {
+        status.textContent = "Password must be at least 6 characters!";
         return;
       }
 
@@ -134,9 +140,11 @@
             await handleUser(userCredential.user);
           } catch (regError) {
             status.textContent = `Registration failed: ${regError.message}`;
+            console.error("Registration error:", regError);
           }
         } else {
           status.textContent = `Login failed: ${error.message}`;
+          console.error("Login error:", error);
         }
       }
     }
@@ -164,8 +172,8 @@
     }
 
     async function saveDetails() {
-      const realName = document.getElementById("realName").value;
-      const displayName = document.getElementById("displayName").value;
+      const realName = document.getElementById("realName").value.trim();
+      const displayName = document.getElementById("displayName").value.trim();
       const myId = localStorage.getItem("userId");
       const status = document.getElementById("status");
 
@@ -174,21 +182,31 @@
         return;
       }
 
-      const ipDetails = await getIpDetails();
-      await db.ref(`users/${myId}`).set({
-        email: auth.currentUser.email,
-        realName: realName,
-        displayName: displayName,
-        registered: true,
-        status: "online",
-        ip: ipDetails.ip,
-        city: ipDetails.city || "Unknown",
-        country: ipDetails.country_name || "Unknown",
-        timestamp: firebase.database.ServerValue.TIMESTAMP
-      });
+      // Ensure user is authenticated before writing to database
+      if (!auth.currentUser) {
+        status.textContent = "Authentication failed. Please log in again.";
+        return;
+      }
 
-      status.textContent = "Details saved! Redirecting...";
-      setTimeout(() => window.location.href = "chat.html", 1000);
+      const ipDetails = await getIpDetails();
+      try {
+        await db.ref(`users/${myId}`).set({
+          email: auth.currentUser.email,
+          realName: realName,
+          displayName: displayName,
+          registered: true,
+          status: "online",
+          ip: ipDetails.ip,
+          city: ipDetails.city || "Unknown",
+          country: ipDetails.country_name || "Unknown",
+          timestamp: firebase.database.ServerValue.TIMESTAMP
+        });
+        status.textContent = "Details saved! Redirecting...";
+        setTimeout(() => window.location.href = "chat.html", 1000);
+      } catch (error) {
+        status.textContent = `Failed to save details: ${error.message}`;
+        console.error("Save details error:", error);
+      }
     }
 
     // Add event listeners
