--- a/chat.html
+++ b/chat.html
@@ -131,6 +131,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
   <script>
+    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCiN7DLtxTHncqYGy0hGCFao9TCAu2Z4mo",
       authDomain: "talknix-p2p.firebaseapp.com",
@@ -143,30 +144,36 @@
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+    console.log("Firebase initialized in chat.html:", firebase.app().name); // Debugging
     const auth = firebase.auth();
     const db = firebase.database();
 
     let myId, pc, dc, callId, pendingCallId;
 
-    auth.onAuthStateChanged(async user => {
+    // Check authentication state
+    auth.onAuthStateChanged(async (user) => {
       if (!user) {
+        console.log("No user authenticated, redirecting to index.html");
         window.location.href = "index.html";
         return;
       }
 
       myId = localStorage.getItem("userId");
       if (!myId) {
+        console.log("No userId in localStorage, redirecting to index.html");
         window.location.href = "index.html";
         return;
       }
 
       const snapshot = await db.ref(`users/${myId}`).once("value");
       if (!snapshot.exists()) {
+        console.log("User data not found in database, clearing localStorage and redirecting");
         localStorage.removeItem("userId");
         window.location.href = "index.html";
         return;
       }
 
+      console.log("User authenticated, ID:", myId);
       document.getElementById("myId").textContent = `Your ID: ${myId}`;
       listenForCalls();
     });
@@ -193,14 +200,18 @@
 
       setupChat();
       pc.onicecandidate = (e) => {
-        if (e.candidate) db.ref(`calls/${callId}/iceCandidates/${myId}`).push(e.candidate);
+        if (e.candidate) {
+          db.ref(`calls/${callId}/iceCandidates/${myId}`).push(e.candidate);
+        }
       };
       pc.createOffer()
-        .then(offer => pc.setLocalDescription(offer))
+        .then((offer) => pc.setLocalDescription(offer))
         .then(() => db.ref(`calls/${callId}/offer`).set(pc.localDescription));
 
       db.ref(`calls/${callId}/answer`).on("value", (snapshot) => {
-        if (snapshot.val()) pc.setRemoteDescription(snapshot.val());
+        if (snapshot.val()) {
+          pc.setRemoteDescription(snapshot.val());
+        }
       });
       db.ref(`calls/${callId}/iceCandidates/${friendId}`).on("child_added", (snapshot) => {
         pc.addIceCandidate(snapshot.val());
@@ -208,7 +219,7 @@
     }
 
     function listenForCalls() {
-      db.ref(`calls`).orderByKey().startAt(`${myId}_to`).on("child_added", async (snapshot) => {
+      db.ref("calls").orderByKey().startAt(`${myId}_to`).on("child_added", async (snapshot) => {
         pendingCallId = snapshot.key;
         const callerId = pendingCallId.split("_to_")[0];
         const callerSnapshot = await db.ref(`users/${callerId}`).once("value");
@@ -235,12 +246,14 @@
         const offer = offerSnap.val();
         pc.setRemoteDescription(offer)
           .then(() => pc.createAnswer())
-          .then(answer => pc.setLocalDescription(answer))
+          .then((answer) => pc.setLocalDescription(answer))
           .then(() => db.ref(`calls/${callId}/answer`).set(pc.localDescription));
       });
 
       pc.onicecandidate = (e) => {
-        if (e.candidate) db.ref(`calls/${callId}/iceCandidates/${myId}`).push(e.candidate);
+        if (e.candidate) {
+          db.ref(`calls/${callId}/iceCandidates/${myId}`).push(e.candidate);
+        }
       };
       db.ref(`calls/${callId}/iceCandidates/${callId.split("_to_")[0]}`).on("child_added", (snapshot) => {
         pc.addIceCandidate(snapshot.val());
@@ -276,7 +289,7 @@
         dc.send(msg);
         addMessage(`You: ${msg}`, true);
         document.getElementById("message").value = "";
-        db.ref(`calls/${callId}/typing").set(false);
+        db.ref(`calls/${callId}/typing`).set(false);
       } else {
         alert("Not connected yet!");
       }
@@ -305,7 +318,9 @@
       const chat = document.getElementById("chat");
       const p = document.createElement("p");
       p.textContent = text;
-      if (isYou) p.classList.add("you");
+      if (isYou) {
+        p.classList.add("you");
+      }
       chat.appendChild(p);
       chat.scrollTop = chat.scrollHeight;
     }
@@ -314,9 +329,11 @@
     document.getElementById("connectButton").addEventListener("click", connect);
     document.getElementById("disconnectButton").addEventListener("click", disconnect);
     document.getElementById("sendButton").addEventListener("click", sendMessage);
+    document.getElementById("message").addEventListener("input", updateTyping);
     document.getElementById("acceptButton").addEventListener("click", acceptRequest);
     document.getElementById("rejectButton").addEventListener("click", rejectRequest);
-    document.getElementById("message").addEventListener("input", updateTyping);
+
+    console.log("Event listeners added successfully"); // Debugging
   </script>
 </body>
 </html>
