--- a/chat.html
+++ b/chat.html
@@ -343,19 +343,33 @@
           }
         };
         pc.createOffer()
-          .then((offer) => pc.setLocalDescription(offer))
-          .then(() => db.ref(`calls/${callId}/offer`).set(pc.localDescription))
+          .then((offer) => {
+            console.log("Created offer:", offer);
+            return pc.setLocalDescription(offer);
+          })
+          .then(() => {
+            console.log("Local description set, saving offer to Firebase");
+            db.ref(`calls/${callId}/offer`).set({
+              type: pc.localDescription.type,
+              sdp: pc.localDescription.sdp
+            });
+          })
           .catch((error) => console.error("Error creating offer:", error));
 
         db.ref(`calls/${callId}/answer`).on("value", (snapshot) => {
-          if (snapshot.val()) {
-            pc.setRemoteDescription(snapshot.val())
-              .catch((error) => console.error("Error setting remote description:", error));
+          const answer = snapshot.val();
+          if (answer) {
+            console.log("Received answer:", answer);
+            console.log("Current signaling state before setting answer:", pc.signalingState);
+            pc.setRemoteDescription(new RTCSessionDescription(answer))
+              .catch((error) => console.error("Error setting remote description (answer):", error));
           }
         });
 
         db.ref(`calls/${callId}/iceCandidates/${friendId}`).on("child_added", (snapshot) => {
-          pc.addIceCandidate(snapshot.val())
+          const candidate = snapshot.val();
+          console.log("Received ICE candidate from friend:", candidate);
+          pc.addIceCandidate(new RTCIceCandidate(candidate))
             .catch((error) => console.error("Error adding ICE candidate:", error));
         });
       }
@@ -392,28 +406,62 @@
 
       if (!isInitiator) {
         pc = new RTCPeerConnection({ iceServers: [{ urls: "stun:stun.l.google.com:19302" }] });
+        console.log("Created new RTCPeerConnection for callee, signaling state:", pc.signalingState);
+
         pc.ondatachannel = (e) => {
           dc = e.channel;
           setupChat();
         };
 
-        db.ref(`calls/${callId}/offer`).once("value", (offerSnap) => {
+        db.ref(`calls/${callId}/offer`).once("value", async (offerSnap) => {
           const offer = offerSnap.val();
-          pc.setRemoteDescription(offer)
-            .then(() => pc.createAnswer())
-            .then((answer) => pc.setLocalDescription(answer))
-            .then(() => db.ref(`calls/${callId}/answer`).set(pc.localDescription))
-            .catch((error) => console.error("Error accepting request:", error));
+          if (!offer) {
+            console.error("No offer found in Firebase for callId:", callId);
+            return;
+          }
+
+          console.log("Fetched offer from Firebase:", offer);
+          console.log("Current signaling state before setting offer:", pc.signalingState);
+
+          try {
+            // Ensure the offer is a valid RTCSessionDescription
+            const sessionDescription = new RTCSessionDescription({
+              type: offer.type,
+              sdp: offer.sdp
+            });
+
+            // Set the remote description (offer)
+            await pc.setRemoteDescription(sessionDescription);
+            console.log("Remote description (offer) set successfully, signaling state:", pc.signalingState);
+
+            // Create and set the answer
+            const answer = await pc.createAnswer();
+            console.log("Created answer:", answer);
+            await pc.setLocalDescription(answer);
+            console.log("Local description (answer) set, signaling state:", pc.signalingState);
+
+            // Save the answer to Firebase
+            await db.ref(`calls/${callId}/answer`).set({
+              type: pc.localDescription.type,
+              sdp: pc.localDescription.sdp
+            });
+            console.log("Answer saved to Firebase");
+          } catch (error) {
+            console.error("Error accepting request:", error);
+          }
         });
 
         pc.onicecandidate = (e) => {
           if (e.candidate) {
+            console.log("Sending ICE candidate:", e.candidate);
             db.ref(`calls/${callId}/iceCandidates/${myId}`).push(e.candidate);
           }
         };
 
         db.ref(`calls/${callId}/iceCandidates/${ids[0]}`).on("child_added", (snapshot) => {
-          pc.addIceCandidate(snapshot.val())
+          const candidate = snapshot.val();
+          console.log("Received ICE candidate from caller:", candidate);
+          pc.addIceCandidate(new RTCIceCandidate(candidate))
             .catch((error) => console.error("Error adding ICE candidate:", error));
         });
       }
@@ -446,7 +494,6 @@
       };
       dc.onmessage = (e) => {
         addMessage(`Friend: ${e.data}`);
-        // Save message to history
         db.ref(`users/${myId}/chatHistory/${callId}`).push({
           sender: "Friend",
           text: e.data,
@@ -465,7 +512,6 @@
       if (dc && dc.readyState === "open") {
         dc.send(msg);
         addMessage(`You: ${msg}`, true);
-        // Save message to history
         db.ref(`users/${myId}/chatHistory/${callId}`).push({
           sender: "You",
           text: msg,
